examples/test/testpolicy4478.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4478
  namespace: namespace352
spec:
  podSelector:
    matchLabels:
      key3: value24
      key46: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value19
          key4: value13
      podSelector:
        matchLabels:
          key39: value49
          key8: value25
          key41: value21
